# EntropyEngine

./: .gitignore  CMakeLists.txt  CMakeLists_ios_bkup.txt  CMakeLists_macos.txt  CmakeLists.txt  Entropy-Engine.sln  LICENSE.txt  README.md  animal.cpp  animal.h  animal.i  animal_wrap.cxx  config.h.in  test.cs
.cache/clangd/index/: 2d_quad.h.514C0F945CFC41E9.idx  allocator.cpp.8A6DD22719406C7A.idx  allocator.h.DBD7D43D57178EA2.idx  asset_manager.cpp.E53CA85F0C846D76.idx  asset_manager.h.04D5A3653F636F5B.idx  base_buffer.cpp.1ECCF8A23A3EA547.idx  base_buffer.h.76ED4DC7020ECD1E.idx  base_camera.h.926A52AB19C6C3DE.idx  base_pipeline.cpp.3315C05324C04E58.idx  base_pipeline.h.D428183088D1C34C.idx  base_texture.cpp.52269AD52574BBC1.idx  base_texture.h.1AADF5E16EA8E91C.idx  camera_manager.h.CFB8A24361D0E384.idx  commandbuffer.cpp.8AE442BC70D22FA2.idx  commandbuffer.h.162A6D0ABEFFA5DF.idx  commandpool.cpp.4C42B336B9441AF5.idx  commandpool.h.B1856178B2DDB57E.idx  config.h.6D70FA540BF23214.idx  data.h.4ECDEAB83198FF07.idx  depthbuffer_texture.cpp.D6DB4985EC3EA1B9.idx  depthbuffer_texture.h.2956B29AF0828120.idx  descriptorpool.cpp.E430CA24444E1070.idx  descriptorpool.h.30D84F508420E2F4.idx  descriptorset.cpp.5A80405398150B18.idx  descriptorset.h.1ECBF96C304D3751.idx  descriptorset_layout.cpp.8741398E5ED27B7C.idx  descriptorset_layout.h.8BEC3705F3AABA16.idx  dimension.h.DF97710D07B5EF94.idx  helpers.cpp.B22D41AD640DDDC1.idx  helpers.h.45810A7DB3C0CE7E.idx  iallocator.h.83E1C717A808ABC9.idx  iasset_manager.h.19AA33E8C54AA39C.idx  icamera_manger.h.BD1000D26893AEBC.idx  icommandpool.h.2B39CE42FF20BA6A.idx  idescriptorpool.h.EF06FE07DCBC5D35.idx  ilogical_device.h.6A4EBE9E94A45107.idx  imageview.cpp.4061CB387AA8F49B.idx  imageview.h.566278D89D7EBA0C.idx  index_buffer.cpp.7678833E9F6A9E93.idx  index_buffer.h.B04C63FC686D1DBE.idx  (+59 more)
.github/workflows/: cmake-multi-platform.yml  codeql.yml
bindings/csharp/: CsharpBindings.csproj  NativeBinding.cs
bindings/csharp/ecs/: Entity.cs
cmake/: entropy.cmake
include/: config.h  entropy.h  entropy_test.h
include/metal-cpp/AppKit/: NSApplication.hpp
include/metal-cpp/UIKit/: UIApplication.hpp  UIScreen.hpp
libraries/: Animal.cs  AnimalModule.cs  AnimalModulePINVOKE.cs
scripting/: test.cs
scripting/entropy/: NativeBinding.cs  asset.cs  component.cs  entity.cs  entropy_script.cs  texture.cs  texture_old.cs  textureatlas.cs
scripting/entropy/ecs/: Entity.cs
shaders/: build-shaders-macos.sh  build-shaders-windows.bat  build-shaders.sh  shader-combiner.py
shaders/2d_shader/: 2d_shader.frag  2d_shader.vert
shaders/2dshader/: 2dshader.frag  2dshader.vert
shaders/3d_anim_shader/: 3d_anim_shader.frag  3d_anim_shader.vert
shaders/combined/2d_shader/: 2d_shader.frag  2d_shader.vert
shaders/combined/static/: static.frag  static.vert
shaders/compiled/2d_shader/: 2d_shader_frag.spv  2d_shader_vert.spv
shaders/compiled/2dshader/: 2dshader_frag.spv  2dshader_vert.spv
shaders/shader_parts/common/: frag_layout.glsl  instance_data.glsl  object_types.glsl  push_constants.glsl  vertex_layout.glsl
shaders/shader_parts/lighting/: light.glsl
src/: config.h  main.cpp
src/assets/: asset_manager.cpp  asset_manager.cxx  asset_manager.h  asset_manager.hxx  iasset.h  iasset_manager.h  itexture_manager.h  texture_asset.h  texture_manager.cpp  texture_manager.h
src/cameras/: base_camera.h  camera_manager.h  icamera_manger.h  orthographic_camera.cpp  orthographic_camera.h
src/ecs/: iworld.h  world.cpp  world.h
src/ecs/components/: 2d_quad.h  asset.h  color.h  dimension.h  position.h  rotation.h  script.h  sprite.h  texture.h
src/ecs/tags/: 2d.h  textureatlas.h
src/entrypoints/: entropyengine.cpp  entropyengine.h
src/filesystem/: filesystem.h
src/loggers/: logger.cpp  logger.h
src/renderers/: irenderer.h  vulkan_batch_renderer.cpp  vulkan_batch_renderer.h  vulkan_renderer.cpp  vulkan_renderer.h  vulkan_renderer_old.h
src/scripting/: bindings.cpp  bindings.h  scripting.cpp  scripting.h
src/servicelocators/: servicelocator.cpp  servicelocator.h
src/stb/: stb_rect_pack.h
src/vulkan/buffers/: base_buffer.cpp  base_buffer.h  index_buffer.cpp  index_buffer.h  staging_buffer.cpp  staging_buffer.h  storage_buffer.cpp  storage_buffer.h  uniform_buffer.cpp  uniform_buffer.h  vertex_buffer.cpp  vertex_buffer.h
src/vulkan/commandbuffers/: commandbuffer.cpp  commandbuffer.h
src/vulkan/commandpools/: commandpool.cpp  commandpool.h  icommandpool.h
src/vulkan/data/: data.h  entity.h  frame.h  pushcontants.h  vertex.h
src/vulkan/descriptorpools/: descriptorpool.cpp  descriptorpool.h  idescriptorpool.h
src/vulkan/descriptorsetlayouts/: descriptorset_layout.cpp  descriptorset_layout.h
src/vulkan/descriptorsets/: descriptorset.cpp  descriptorset.h
src/vulkan/devices/: ilogical_device.h  iphysical_device.h  logical_device.cpp  logical_device.h  physical_device.cpp  physical_device.h
src/vulkan/imageviews/: imageview.cpp  imageview.h
src/vulkan/instances/: ivk_instance.h  vk_instance.cpp  vk_instance.h
src/vulkan/memory/: allocator.cpp  allocator.h  iallocator.h
src/vulkan/pipelinecaches/: ipipeline_cache.h  pipeline_cache.cpp  pipeline_cache.h
src/vulkan/pipelines/: base_pipeline.cpp  base_pipeline.h  twod_pipeline.cpp  twod_pipeline.h
src/vulkan/queuefamilies/: queuefamily.cpp  queuefamily.h
src/vulkan/renderpasses/: renderpass.cpp  renderpass.h
src/vulkan/shaders/: shader.cpp  shader.h
src/vulkan/surfaces/: surface.cpp  surface.h
src/vulkan/swapchains/: iswapchain.h  swapchain.cpp  swapchain.h
src/vulkan/synchronization/: synchronizer.cpp  synchronizer.h
src/vulkan/textures/: base_texture.cpp  base_texture.h  depthbuffer_texture.cpp  depthbuffer_texture.h  swapchain_texture.cpp  swapchain_texture.h  texture.cpp  texture.h  textureatlas.cpp  textureatlas.h
src/vulkan/utilities/: helpers.cpp  helpers.h
src/vulkan/validationlayers/: validationlayer.cpp  validationlayer.h
test/: CmakeLists.txt  main.cpp
test/include/: config.h
test/unit/: asset_manager.cpp  main.cxx  vulkan_test.cpp
wrappers/: test.cs
(+28 files in other folders)
